Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "About") %>
 <h1>About</h1>
 <p>
   The Rememoir app provides a platform for users to log their memories throughout their life.
