--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,12 @@
-<h1>Rememoir App</h1>
-<p>
-  This is the home page for the Rememoir application.
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to Rememoir</h1>
+
+  <h2>
+    This is the home page for the Rememoir application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+                      "https://rubyonrails.org/" %>
