--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.memories.any? %>
+      <h3>Memories (<%= @user.memories.count %>)</h3>
+      <ol class="memories">
+        <%= render @memories %>
+      </ol>
+      <%= will_paginate @memories %>
+    <% end %>
+  </div>
 </div>
