--- a/app/views/memories/_memory.html.erb
+++ b/app/views/memories/_memory.html.erb
@@ -4,5 +4,9 @@
   <span class="content"><%= memory.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(memory.created_at) %> ago.
+    <% if current_user?(memory.user) %>
+      <%= link_to "delete", memory, data: { "turbo-method": :delete,
+                                            turbo_confirm: "You sure?" } %>
+    <% end %>
   </span>
 </li>
