--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,30 @@
-<div class="center jumbotron">
-  <h1>Welcome to Rememoir</h1>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="memory_form">
+        <%= render 'shared/memory_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Memory Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 
-  <h2>
-    This is the home page for the Rememoir application.
-  </h2>
+  <div class="center jumbotron">
+    <h1>Welcome to Rememoir</h1>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+    <h2>
+      This is the home page for the Rememoir application.
+    </h2>
 
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+
+  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
                       "https://rubyonrails.org/" %>
+<% end %>
